# ros2_gk_description

./: README.md
ros2_gk_description/: CMakeLists.txt  package.xml
ros2_gk_description/config/: arm_controllers.yaml  arm_teleop.py
ros2_gk_description/launch/: display.launch.py  gazebo.launch.py
ros2_gk_description/maps/: room_8x8.pgm  room_8x8.yaml
ros2_gk_description/meshes/: arm_1_link_1.stl  arm_2_link_1.stl  base_link.stl  camera_link_1.stl  caster_wheel_link_1.stl  gps_link_1.stl  left_wheel_link_1.stl  lidar_link_1.stl  right_wheel_link_1.stl
ros2_gk_description/rviz/: slam_config.rviz
ros2_gk_description/urdf/: materials.xacro  ros2_gk.gazebo  ros2_gk.trans  ros2_gk.urdf.xacro
ros2_gk_description/worlds/: test_room.world
